[gd_scene load_steps=9 format=3 uid="uid://booqg2fygvb1j"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_2ilkl"]
[ext_resource type="FontFile" uid="uid://dtbo7ufseye1o" path="res://assets/fonts/PixelOperator8.ttf" id="2_b8ceg"]
[ext_resource type="AudioStream" uid="uid://dsk8arux4e57g" path="res://assets/sounds/select.wav" id="3_qtgn6"]
[ext_resource type="AudioStream" uid="uid://c7ausv526nehp" path="res://assets/sounds/enter.wav" id="4_5idfs"]

[sub_resource type="Theme" id="Theme_lc2cg"]
default_font = ExtResource("2_b8ceg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ixp1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bofot"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxql2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)

[node name="StartScreen" type="ColorRect"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_2ilkl")

[node name="GameTitle" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294271
anchor_top = 0.198142
anchor_right = 0.705729
anchor_bottom = 0.312694
offset_left = -50.0002
offset_top = -0.396027
offset_right = 50.0002
offset_bottom = -0.625717
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_b8ceg")
theme_override_font_sizes/font_size = 56
text = "Skipz's Pong
"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="StartButton" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -35.0
offset_right = 140.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lc2cg")
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_1ixp1")
theme_override_styles/hover = SubResource("StyleBoxFlat_bofot")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxql2")
action_mode = 0
text = "Start"

[node name="SettingsButton" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.64429
anchor_right = 0.5
anchor_bottom = 0.64429
offset_left = -140.0
offset_top = -46.5
offset_right = 140.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lc2cg")
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_1ixp1")
theme_override_styles/hover = SubResource("StyleBoxFlat_bofot")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxql2")
action_mode = 0
text = "Settings"
metadata/_edit_use_anchors_ = true

[node name="CreditsButton" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.76929
anchor_right = 0.5
anchor_bottom = 0.76929
offset_left = -140.0
offset_top = -45.4999
offset_right = 140.0
offset_bottom = 26.5001
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lc2cg")
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_1ixp1")
theme_override_styles/hover = SubResource("StyleBoxFlat_bofot")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxql2")
action_mode = 0
text = "Credits
"
metadata/_edit_use_anchors_ = true

[node name="ExitButton" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.881
anchor_right = 0.5
anchor_bottom = 0.881
offset_left = -140.0
offset_top = -35.888
offset_right = 140.0
offset_bottom = 36.1119
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lc2cg")
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_1ixp1")
theme_override_styles/hover = SubResource("StyleBoxFlat_bofot")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxql2")
action_mode = 0
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="SFX" type="Node" parent="."]

[node name="Select" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("3_qtgn6")
bus = &"SFX"

[node name="Enter" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_5idfs")
bus = &"SFX"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="focus_exited" from="StartButton" to="." method="_on_start_button_focus_exited"]
[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_exited" from="SettingsButton" to="." method="_on_settings_button_focus_exited"]
[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="focus_exited" from="CreditsButton" to="." method="_on_credits_button_focus_exited"]
[connection signal="mouse_entered" from="CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="focus_exited" from="ExitButton" to="." method="_on_exit_button_focus_exited"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="finished" from="SFX/Enter" to="." method="_on_enter_finished"]
